--- a/codecademy_exercise/Responsive_design-Tsunmi_Coffee/style.css
+++ b/codecademy_exercise/Responsive_design-Tsunmi_Coffee/style.css
@@ -15,10 +15,8 @@ body {
   height: 30rem;
   padding-top: 1rem;
   background-image:url(https://content.codecademy.com/courses/freelance-1/unit-5/tsunami-coffee/images/bg-photo.png);
-padding-top: 0.75rem;
-padding-bottom: 0.75rem;
-padding-left: 1.25rem;
-padding-right: 1.25rem;
+padding-top: 1rem;
+background-position: center;
 }
 
 .main img {
@@ -40,6 +38,7 @@ ul {
 
 li {
   display: inline-block;
+  padding: 0.75rem 1.25rem;
 }
 
 .supporting,
